tests/error/template_ternary.gw
#! [contains] invalid expression for function call
fun void test<~A](A a){}

(maybe ? test : test)(1);
